@@ -1,6 +1,6 @@
 import play.core.PlayVersion.pekkoVersion
 
-resolvers += Resolver.sonatypeCentralSnapshots
+resolvers ++= Seq(Resolver.sonatypeCentralSnapshots, Resolver.ApacheMavenSnapshotsRepo)
 
 def scala2OnlyScalacOptions(options: String*) = Def.setting {
   CrossVersion.partialVersion(scalaVersion.value) match {
@@ -15,7 +15,7 @@ lazy val root = (project in file("."))
   .settings(
     name := """play-scala-secure-session-example""",
     version := "1.0-SNAPSHOT",
-    crossScalaVersions := Seq("2.13.18", "3.8.3"),
+    crossScalaVersions := Seq("2.13.18", "3.3.8"),
     scalaVersion := crossScalaVersions.value.head,
     libraryDependencies ++= Seq(
       ws,
@@ -24,10 +24,11 @@ lazy val root = (project in file("."))
       "com.github.jnr" % "jnr-ffi" % "2.2.19",
       "org.apache.pekko" %% "pekko-distributed-data" % pekkoVersion,
       "org.apache.pekko" %% "pekko-cluster-typed" % pekkoVersion,
-      "org.scalatestplus.play" %% "scalatestplus-play" % "8.0.0-M2" % Test
+      "org.scalatestplus.play" %% "scalatestplus-play" % "8.0.0-M2+52-be104c90-SNAPSHOT" % Test
     ),
     scalacOptions ++= Seq(
       "-feature",
       "-Werror"
-    ) ++ scala2OnlyScalacOptions("-Xsource:3").value
+    ) ++ scala2OnlyScalacOptions("-Xsource:3").value,
+    Test / javaOptions ++= Seq("--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"),
   )
